overlays/prod-backapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /backapp
spec:
  rules:
  - host: other.cubix.localhost
    http:
      paths:
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: backapp
            port:
              number: 80
